<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activity.SettingsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/axes"
            android:textAppearance="@style/txt_h1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_build"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/btn_margin"
            android:layout_marginEnd="@dimen/btn_margin"
            android:layout_marginBottom="32dp"
            android:text="@string/build"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/txt_x_min"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginStart="@dimen/btn_margin"
            android:layout_marginTop="32dp"
            android:text="@string/xmin"
            android:textAppearance="@style/txt_h2"
            app:layout_constraintEnd_toStartOf="@+id/inp_x_min"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/inp_x_min"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:inputType="numberSigned|numberDecimal"
            android:textAppearance="@style/txt_h2"
            android:nextFocusForward="@id/inp_x_max"
            android:imeOptions="actionNext"
            app:layout_constraintBottom_toBottomOf="@+id/txt_x_min"
            app:layout_constraintEnd_toStartOf="@+id/txt_x_max"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/txt_x_min"
            app:layout_constraintTop_toTopOf="@+id/txt_x_min" />

        <TextView
            android:id="@+id/txt_x_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/xmax"
            android:textAppearance="@style/txt_h2"
            app:layout_constraintEnd_toStartOf="@+id/inp_x_max"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/inp_x_min"
            app:layout_constraintTop_toTopOf="@+id/txt_x_min" />

        <EditText
            android:id="@+id/inp_x_max"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:nextFocusForward="@id/inp_y_min"
            android:inputType="numberSigned|numberDecimal"
            android:textAppearance="@style/txt_h2"
            android:imeOptions="actionNext"
            app:layout_constraintBottom_toBottomOf="@+id/txt_x_max"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/txt_x_max"
            app:layout_constraintTop_toTopOf="@+id/txt_x_max" />


        <TextView
            android:id="@+id/txt_y_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="yMin"
            android:textAppearance="@style/txt_h2"
            app:layout_constraintEnd_toStartOf="@+id/inp_y_min"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_x_min" />

        <EditText
            android:id="@+id/inp_y_min"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:inputType="numberSigned|numberDecimal"
            android:textAppearance="@style/txt_h2"
            android:nextFocusForward="@id/inp_y_max"
            android:imeOptions="actionNext"
            app:layout_constraintBottom_toBottomOf="@+id/txt_y_min"
            app:layout_constraintEnd_toStartOf="@+id/txt_y_max"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/txt_y_min"
            app:layout_constraintTop_toTopOf="@+id/txt_y_min" />

        <TextView
            android:id="@+id/txt_y_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="yMax"
            android:textAppearance="@style/txt_h2"
            app:layout_constraintBottom_toBottomOf="@+id/txt_y_min"
            app:layout_constraintEnd_toStartOf="@+id/inp_y_max"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/inp_y_min"
            app:layout_constraintTop_toTopOf="@+id/txt_y_min" />

        <EditText
            android:id="@+id/inp_y_max"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="numberSigned|numberDecimal"
            android:textAppearance="@style/txt_h2"
            android:imeOptions="actionDone"
            app:layout_constraintBottom_toBottomOf="@+id/txt_y_max"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/txt_y_max"
            app:layout_constraintTop_toTopOf="@+id/txt_y_max" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/axes_color"
            android:textAppearance="@style/txt_h2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_y_min" />

        <RadioGroup
            android:id="@+id/rgrp_axes_color"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7">


            <RadioButton
                android:id="@+id/rbtn_axes_black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/black" />

            <RadioButton
                android:id="@+id/rbtn_axes_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/blue" />

            <RadioButton
                android:id="@+id/rbtn_axes_red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/red" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/graph"
            android:textAppearance="@style/txt_h1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rgrp_axes_color" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/graph_color"
            android:textAppearance="@style/txt_h2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <RadioGroup
            android:id="@+id/rgrp_graph_color"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9">

            <RadioButton
                android:id="@+id/rbtn_graph_red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/red" />

            <RadioButton
                android:id="@+id/rbtn_graph_green"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/green" />

            <RadioButton
                android:id="@+id/rbtn_graph_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/blue" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/graph_thickness"
            android:textAppearance="@style/txt_h2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rgrp_graph_color" />

        <RadioGroup
            android:id="@+id/rgrp_graph_thikness"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10">

            <RadioButton
                android:id="@+id/rbtn_graph_thin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thin" />

            <RadioButton
                android:id="@+id/rbtn_graph_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/medium" />

            <RadioButton
                android:id="@+id/rbtn_graph_thick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/thick" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/rgrp_functions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_build"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rgrp_graph_thikness"
            app:layout_constraintVertical_bias="1.0">

            <RadioButton
                android:id="@+id/rbtn_func_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="x-5sin^2(x)" />

            <RadioButton
                android:id="@+id/rbtn_func_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="x^2/25 - y^2/16 - 1" />
        </RadioGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>